Experience Section Overlapping Solved

--- a/style.css
+++ b/style.css
@@ -307,7 +307,7 @@ margin-bottom: 20rem;
         width: 18rem !important;;
     }
     .experience{
-        transform: translateX(-6rem);
+        transform: translateX(-8rem);
     }
     .timeline-2 {
       width: 100%;
